2010-02-12
	* src/minikafs.c: crank up debug verbosity (Chris Wing, #157107)
	* src/kuserok.c(_pam_krb5_kuserok): also set up the user's ccache,
	in case there's a process on the box that expects the user to have
	creds before it can look up the location of the user's .k5login file
	or read from it (possible fix for #563442)

2010-01-19
	* src/minikafs.c: call krb5_allow_weak_crypto(), if defined, before
	doing anything with DES.  call krb5_enctype_enable(), if defined,
	before attempting to get a credential with a specific enctype.

2010-01-07
	* configure.in: check for krb5_change_password, krb5_set_password,
	krb5_xfree
	* src/v5.c: add v5_change_password(); make v5_free_unparsed_name()
	call krb5_xfree(), if it exists, in preference over
	krb5_free_unparsed_name() or free()
	* src/password.c: use v5_change_password()

2009-12-11
	* Makefile.am,configure.ac: relegate use of RPM to the 'archive'
	target, don't use it in our regular build machinery
	* configure.ac,src/options.c,src/stash.c,src/v4.c,src/v5.c: add a
	'multiple_ccaches' option, and change the default behavior from on
	to off
	* configure.ac,src/options.c: allow setting a default value for
	chpw_prompt

2009-11-10
	* src/harness.c: we're not using our internal logging stuff, so we can
	eject most of the Kerberos-specific bits

2009-10-07
	* src/prompter.c(_pam_krb5_prompt_type): add, abstracting out an
	API difference.
	* src/prompter.c(_pam_krb5_generic_prompter): use prompt type
	information to override prompt text for new passwords.  Change saving
	of the PAM_AUTHTOK so that we do so only when we've asked for both a
	new password and confirmation.  Fix what might have been a bug in
	how we number responses when we're asked for the current password and
	we're suppressing such requests in unknown cases where libkrb5 could
	ask both for the current and new passwords.
	* src/tokens.c,src/minikafs.c,src/afs5log.c,src/options.c: fix some
	signedness warnings

2009-10-05